--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "git": "^0.1.5",
+    "github": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
